force-app/main/default/objects/SlaProcessByCase__mdt/SlaProcessByCase__mdt.object-meta.xml
<CustomObject>
    <label>SlaProcessByCase</label>
    <pluralLabel>SlaProcessByCase</pluralLabel>
</CustomObject>