force-app/main/default/objects/SlaProcessByCase__mdt/fields/Case_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordType__c</fullName>
    <label>Case_RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>