force-app/main/default/objects/SlaProcessByCase__mdt/fields/Categorizacion_SS__c.field-meta.xml
<CustomField>
    <fullName>Categorizacion_SS__c</fullName>
    <label>Categorizacion_SS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>