force-app/main/default/objects/SlaProcessByCase__mdt/fields/Check_Material__c.field-meta.xml
<CustomField>
    <fullName>Check_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check_Material</label>
    <type>Checkbox</type>
</CustomField>