force-app/main/default/objects/SlaProcessByCase__mdt/fields/Check_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Check_Presupuesto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check_Presupuesto</label>
    <type>Checkbox</type>
</CustomField>