force-app/main/default/objects/SlaProcessByCase__mdt/fields/SlaProcessName__c.field-meta.xml
<CustomField>
    <fullName>SlaProcessName__c</fullName>
    <label>SlaProcessName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>