force-app/main/default/objects/SlaProcessByCase__mdt/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>